CGIV-7903 Fixed an issue with the copy-required input box being too small due to large checkbox width

--- a/public/channelgrabber/settings/scss/_invoicesettings.scss
+++ b/public/channelgrabber/settings/scss/_invoicesettings.scss
@@ -190,6 +190,12 @@
     }
 }
 
+.copy-required-holder {
+    .checkbox-holder {
+        width: 50px;
+    }
+}
+
 .email-verify-button {
     &.hidden {
         display: none;
